metadata/objects/Vedamo_Session_Permalink_Teachers__c.object
<CustomObject>
    <fields>
        <fullName>API_Object_Status__c</fullName>
        <defaultValue>&quot;shared&quot;</defaultValue>
        <label>API Object Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>shared</fullName>
                </value>
                <value>
                    <fullName>unshared</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>API_Operation_Error__c</fullName>
        <label>API Operation Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>API_Operation_Status__c</fullName>
        <label>API Operation Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Permalink_Share_ID__c</fullName>
        <label>API Permalink Share ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permalink_ID__c</fullName>
        <label>Permalink ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <label>User ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Vedamo Session Permalink Teachers</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Vedamo Session Permalink Teachers Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vedamo Session Permalink Teachers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>